Fixed alignment problem with Seen and New buttons being below the word.

--- a/public/style.css
+++ b/public/style.css
@@ -273,7 +273,7 @@ body {
 }
 
 #seenUnseenModal {
-    margin-top: 40%;
+    margin-top: 30%;
     text-align: center;
     color: white;
     position: relative;
